lab1/Test/L1-A-8-86.output
Error Type B at Line 10
Error Type B at Line 16
Error Type B at Line 32
Error Type B at Line 37
