lab1/Test/L1-A-8-86.cmm
struct GBtEoNlHpnWIE8 NN1oPUw76xZAvgV ( struct {
  int NsulDRGGf8WWeED , st3Ahpur8xBlrCN3vRxd = s92ig 
    = eYg5nXwo && fRvg3Xn <= pOsklayhsq - T [ yt5bn_ || 
    Af3uBVlv0z < UadhPk8PCY / - x7zbJEMYJ ( DhzVeobOs_fT6o6N 
    > ( J8fL8bHKniLwspCRI = eg2TWLtAXFP * ( sEEN0gc || 
    LOw74b90b7kQ2L && N_4SNHibS == C - FjojK9Y3g81F9OnbXZ 
    / ( SOujnazbZV = cJ5psA9bow2s_u4cOvr3 = PGVWZy0eEEPpwB 
    + oSEkvI4lmH [ wbzyNlzEbXboZ412B && A3YdUQBsM1Vp1SPP 
    / ! - ( xx >= - uo8Prs4SfdrSLoEZ [ TE1ZFyCXoe1s6AAMTtc 
    float && dSQf_FfKvL4TDCbeaPX1 == ( TJKZHS || Ngh526lDplBFGy65QWA 
    ( DCCs0FfsYJu5pwZpg , J6BzZJK7OhbD ) . eLFhTRhnVTUUckh 
    ) ] ) ] * Hp6X7Fin ) ) >= 1319021421 ) != v2AxkaaAsTf2PwTtiPYG 
    + - ! - - 1413484248.1892440904 ) ] * ! - UlHfQoy2N8TFMXV 
    ( ) . DRX ;
}qyYZPDsb0gaBj ) {
  float yXF85eQr while [ 1834945114 ] ;
}
struct V1oFR76CaVZFIuptAHT onO , FpcbIa8zsU6Gp 

;
int ;
struct Z7CRokF_fmMYd8rbkmR {
};
int BQ ( ) {
}
int dxQW ( ) {
  nduFdTaNe ;
  xEAQ9AHEd3L ;
  GS7RfCEmerDBhBTzUtb ;
  DuA8fFktsIsbDa2Joo ;
  u6QAAcmL6jsmJVwFsU ;
] {
    goKy ;
    if ( Uh0SDE9PM4 )     if ( qZQMRQ3 )     while 
      ( r4x )     U18RZCxvAiAe1KT ;

else     Jmu4K3Hlo != ;

else     if ( qk )     return Lx ;


  }}
int ;
int ;
int ;
int ;
int ;
int v0QSTYidRij56O ( int tAC62VE , int WwVC9jdkhBqIRUIj5 
  ) {
}
int ;
int ;
